Bundle more things.

--- a/src/css.html
+++ b/src/css.html
@@ -1,1 +1,4 @@
-<link rel="stylesheet" href="./styles.scss">
+<link rel="stylesheet" href="../node_modules/sanitize.css/sanitize.css" />
+<link rel="stylesheet" href="../node_modules/sanitize.css/typography.css" />
+<link rel="stylesheet" href="../node_modules/sanitize.css/forms.css" />
+<link rel="stylesheet" href="./styles.scss" />
