--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Another Placeholder Image Generator</title>
+  <title>{{ title }}</title>
   <meta name="description" content="A site that can generate a variety of images.">
 </head>
 <body>
